# tiger-hs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  readme.md  shell.nix  tiger-hs.cabal
src/: main.hs
src/lib/: exercises.hs  interprete.hs
src/lib/lexer/: lexer.hs  tokens.hs
src/lib/parser/: parser.hs
tests/: tests.exercises.hs  tests.hs  tests.lexer.hs
