cabal-version:       >=1.10
name:                tiger-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             WTFPL
license-file:        LICENSE
author:              Nufeen
build-type:          Simple
extra-source-files:  CHANGELOG.md, readme.md

library
  exposed-modules:   Lexer
                   , Tokens
                   , Parser
                   , Exercises
  hs-source-dirs:    src/lib
                   , src/lib/lexer
                   , src/lib/parser
  build-depends:     base >=4.12.0.0
                   , directory
                   , pretty-terminal
                   , hspec
                   , lexer-applicative
                   , regex-applicative
  other-modules:     Interprete
  default-language:  Haskell2010


executable tiger-hs
  main-is:             src/Main.hs
  -- other-modules:       Exercises
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , hspec
                     , tiger-hs
  hs-source-dirs:      src, src/lib
  default-language:    Haskell2010

Test-Suite tests.lexer
  type:              exitcode-stdio-1.0
  main-is:           tests.lexer.hs
  hs-source-dirs:    tests, src, src/lib
  default-language:  Haskell2010
  build-depends:     base >=4.12.0.0
                   , directory
                   , pretty-terminal
                   , hspec
                   , lexer-applicative
                   , regex-applicative
                   , tiger-hs

Test-Suite tests.exercises
  type:              exitcode-stdio-1.0
  other-modules:     Exercises
  main-is:           tests.exercises.hs
  hs-source-dirs:    tests, src, src/lib
  default-language:  Haskell2010
  build-depends:     base >=4.12.0.0
                   , hspec
                   , tiger-hs
